adjusted 1024px css media query

--- a/index.html
+++ b/index.html
@@ -20,12 +20,14 @@
   </head>
   <body>
     <header>
-      <h1 class="main-header">Jordan Roberson</h1>
-      <nav class="main-nav">
-        <a href="#">Home</a>
-        <a href="#">Portfolio</a>
-        <a href="#">Contact </a>
-      </nav>
+      <div class="nav-title">
+        <h1 class="main-header">Jordan Roberson</h1>
+        <nav class="main-nav">
+          <a href="#">Home</a>
+          <a href="#">Portfolio</a>
+          <a href="#">Contact </a>
+        </nav>
+      </div>
       <div class="profile-pic-wrapper">
         <img
           class="profile-pic"
