added skills section

--- a/index.html
+++ b/index.html
@@ -111,6 +111,76 @@
           </li>
         </ul>
       </div>
+      <div class="skills-wrapper">
+        <h2>SKILLS</h2>
+        <ul class="skills-icon-list">
+          <li>
+            <img src="images/bootstrap.png" alt="bootstrap icon" />
+            <h3>Bootstrap</h3>
+            <p>
+              Bootstrap is a framework to help create responsive mobile-first
+              sites utilizing Sass variables, responsive grid system, extensive
+              prebuilt components, and powerful Javascript plugins.
+            </p>
+          </li>
+          <li>
+            <img src="images/css.png" alt="css icon" />
+            <h3>CSS</h3>
+            <p>
+              Cascading Style Sheets is a style sheet language used for
+              describing the presentation of a document written in a markup
+              language such as HTML.
+            </p>
+          </li>
+          <li>
+            <img src="images/commandline.png" alt="command line icon" />
+            <h3>Command Line or Terminal</h3>
+            <p>
+              The command line processes commands to a computer program in the
+              form of lines of text. The program which handles the interface is
+              called a command-line interpreter or command-line processor.
+            </p>
+          </li>
+          <li>
+            <img src="images/git.png" alt="git icon" />
+            <h3>Git</h3>
+            <p>
+              Git is software for tracking changes in any set of files, usually
+              used for coordinating work among programmers collaboratively
+              developing source code during software development.
+            </p>
+          </li>
+          <li>
+            <img src="images/github.png" alt="github icon" />
+            <h3>GitHub</h3>
+            <p>
+              GitHub offers a cloud-based Git repository hosting service.
+              Essentially, it makes it a lot easier for individuals and teams to
+              use Git for version control and collaboration.
+            </p>
+          </li>
+          <li>
+            <img src="images/html5.png" alt="html icon" />
+            <h3>HTML</h3>
+            <p>
+              HyperText Markup Language, or HTML is the standard markup language
+              for documents designed to be displayed in a web browser.
+            </p>
+          </li>
+          <li>
+            <img src="images/javascript.png" alt="javascript icon" />
+            <h3>JavaScript</h3>
+            <p>
+              JavaScript is a scripting or programming language that allows you
+              to implement complex features on web pages — every time a web page
+              does more than just sit there and display static information for
+              you to look at — displaying timely content updates, interactive
+              maps, animated 2D/3D graphics, scrolling video jukeboxes, etc. —
+              you can bet that JavaScript is probably involved.
+            </p>
+          </li>
+        </ul>
+      </div>
     </main>
     <footer>
       <div id="contact" class="footer-wrap">
