--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700;1,900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800&family=Source+Sans+Pro:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700;1,900&display=swap"
       rel="stylesheet"
     />
 
@@ -33,6 +33,7 @@
         <nav class="main-nav">
           <a href="#">Home</a>
           <a href="#portfolio">Portfolio</a>
+          <a href="#skills">Skills </a>
           <a href="#contact">Contact </a>
         </nav>
       </div>
@@ -113,7 +114,7 @@
       </div>
       <div class="skills-wrapper">
         <h2>SKILLS</h2>
-        <ul class="skills-icon-list">
+        <ul id="skills" class="skills-icon-list">
           <li>
             <img src="images/bootstrap.png" alt="bootstrap icon" />
             <h3>Bootstrap</h3>
@@ -193,7 +194,7 @@
           <p>
             <a
               class="email"
-              href="mailto:JordanRobersonCodes@gmail.com?subject=Hey! Let's Collaborate!"
+              href="mailto:JordanRobersonCodes@gmail.com?subject=Hey!%20Let's%20Collaborate!"
               >Email Me</a
             >
           </p>
@@ -212,6 +213,7 @@
         <nav class="footer-nav">
           <a href="#">Home</a>
           <a href="#portfolio">Portfolio</a>
+          <a href="#skills">Skills </a>
           <a href="#contact">Contact </a>
         </nav>
       </div>
