updated css, mobile first layout, updated flexbox

--- a/index.html
+++ b/index.html
@@ -208,14 +208,16 @@
           </div>
         </div>
         <hr />
-        <p class="name">JORDAN ROBERSON</p>
-        <a class="return-top" href="#">BACK TO TOP</a>
-        <nav class="footer-nav">
-          <a href="#">Home</a>
-          <a href="#portfolio">Portfolio</a>
-          <a href="#skills">Skills </a>
-          <a href="#contact">Contact </a>
-        </nav>
+        <div class="footer-nav-title">
+          <p class="name">JORDAN ROBERSON</p>
+          <a class="return-top" href="#">BACK TO TOP</a>
+          <nav class="footer-nav">
+            <a href="#">Home</a>
+            <a href="#portfolio">Portfolio</a>
+            <a href="#skills">Skills </a>
+            <a href="#contact">Contact </a>
+          </nav>
+        </div>
       </div>
     </footer>
   </body>
